tests/fixtures/invalid/pow_bytes_float_none.py
# Cannot call pow() with Bytes, Float, None
x = pow(b"hello", 1.0, None)
